tests/fixtures/LatestTests/TypeConversionFunctionTests/errors/bool_no_argument.fg
/; EXPECT_ERROR: FunctionArgumentCountMismatch
print(Bool())

